--- a/react-side/src/components/Menu/Menu.scss
+++ b/react-side/src/components/Menu/Menu.scss
@@ -12,7 +12,7 @@
     border: none;
     max-height: 976.94px;
     // box-shadow: 15px 15px 15px 0px grey;
-    overflow-y: scroll;
+    
     font-family: 'Baloo2-Regular';
 }
 .text {
